# kalshi-mcp-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.local.md.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  mcpconform.config.json  pyproject.toml  server.json  server.yaml
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release-drafter.yml  release.yml  secret-scan.yml  stale.yml
src/kalshi_mcp_server/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  errors.py  oauth.py  rate_limit.py  safety.py  safety_store.py  ws.py
src/kalshi_mcp_server/resources/: __init__.py  account.py
src/kalshi_mcp_server/tools/: __init__.py  discovery.py  exchange.py  live.py  market_data.py  orders.py  portfolio.py
tests/: conftest.py  test_auth.py  test_client.py  test_discovery.py  test_market_data.py  test_oauth.py  test_orders.py  test_rate_limit.py  test_resources.py  test_safety_limits.py  test_tool_schemas.py  test_tools.py  test_ws.py
